--- a/css/layout/benefits.css
+++ b/css/layout/benefits.css
@@ -203,10 +203,6 @@
     min-height: 80vh;
   }
 
-  .container.benefits h2 {
-    margin-bottom: 40px;
-  }
-
   .indicators {
     margin-top: 20px;
   }
