--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -41,6 +41,8 @@
 }
 
 .bet-br {
+  font-size: var(--font-base);
+  margin-top: var(--spacing-sm);
   font-weight: var(--font-weight-benzin-bold);
 }
 
@@ -78,6 +80,7 @@
     text-align: center;
     order: 2;
     padding-right: 0;
+    gap: 0;
   }
 
   .hero-logo {
